Add initial home template structure and styling

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,4 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
-    Home
+    <h2>Daily</h2>
+    <div class="issue">
+        <div class="cover"></div>
+        <div class="issue-content">
+            <div class="actions">
+                <a href="#">Browse this issue</a>
+                <a href="#">Older issues</a>
+            </div>
+            <div class="issue-info">
+                <p>Issue: 0624</p>
+                <p>The Rise and The Fall</p>
+            </div>
+            <div class="featured-articles">
+                <div class="article">
+                    <h3>
+                        <a href="#">Lorem Ipsum Dolor Sit</a>
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
+                <div class="article">
+                    <h3>
+                        <a href="#">Lorem Ipsum Dolor Sit</a>
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
