--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,3 +82,61 @@ main {
   flex: 1;
   padding: 20px 0;
 }
+
+/* HOME */
+.issue {
+  display: flex;
+  margin: 20px 0;
+  height: 250px;
+}
+
+.issue .cover {
+  width: 200px;
+  height: 250px;
+  background-color: var(--color-foreground);
+  opacity: 25%;
+}
+
+.issue .issue-info p {
+  font-family: Playwrite NZ;
+  font-size: 0.8rem;
+  color: var(--color-foreground);
+  opacity: 50%;
+}
+
+.issue .issue-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 0 0 20px;
+  width: 100%;
+  max-height: 100%;
+}
+
+.issue .issue-content a {
+  color: var(--color-foreground);
+  text-decoration: none;
+}
+
+.issue .issue-content a:hover {
+  text-decoration: underline;
+}
+
+.issue .issue-content .actions {
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+}
+
+.issue .featured-articles {
+  display: flex;
+  gap: 40px;
+}
+
+.issue .article {
+  flex: 1;
+}
+
+.issue .article h3 {
+  margin-bottom: 10px;
+}
