Add content to the about template

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>About</h1>
+    <h2>About</h2>
+    <p>
+        We are core news, an independent news publishing agency that focuses on publishing daily, weekly, and monthly issue of our "core news" newspaper.
+    </p>
+    <p>
+        Our newspaper, "core news", with its daily, weekly, and monthly issues, tackles and focuses on the core and most essential stories and event during that day/week/month accompanied by the opinions and analysis of the most trusted experts in each field. And avoids sensational writings that is meant to inform as much as it is meant to entice strong emotions.
+    </p>
 {% endblock content %}
