Disable weather API calls

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <header>
             <div class="time"></div>
             <h1>core news</h1>
-            <div class="weather"></div>
+            <div class="weather">Clear, 24.2 °C</div>
         </header>
         <nav>
             <div class="pages">
