--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,9 +3,15 @@
     Log In — core news
 {% endblock title %}
 {% block content %}
+    <h2>Log In</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form }}
+        {% for field in form.visible_fields %}
+            <div class="field-container">
+                {{ field.label_tag }}
+                {{ field }}
+            </div>
+        {% endfor %}
         <button type="submit">Log In</button>
     </form>
 {% endblock content %}
