--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    About — core news
+{% endblock title %}
 {% block content %}
     <h2>About</h2>
     <p>
