--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>
             {% block title %}
-                core news
+                core news — All the news you need.
             {% endblock title %}
         </title>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
