--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
                 core news — All the news you need.
             {% endblock title %}
         </title>
+        <link rel="icon" href="{% static 'favicon.svg' %}" type="image/svg+xml">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <script src="{% static 'js/main.js' %}" defer></script>
     </head>
