--- a/templates/issues/issue_edit.html
+++ b/templates/issues/issue_edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Edit issue — core news
+    Edit issue
 {% endblock title %}
 {% block content %}
     <h2>Edit issue</h2>
