--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,15 @@
                 <span class="divider">|</span>
                 <a href="{% url 'about' %}">About</a>
             </div>
-            <div class="account">
+            {% if user.is_authenticated %}<div class="user">{{ user.first_name }} {{ user.last_name }}</div>{% endif %}
+            <div class="actions">
                 {% if user.is_authenticated %}
+                    {% if user.role == "EDITOR" %}
+                        <a href="{% url 'issue_new' %}">New Issue</a>
+                        <span class="divider">|</span>
+                    {% endif %}
+                    <a href="#">New Article</a>
+                    <span class="divider">|</span>
                     <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
                         <button type="submit">Log Out</button>
