Add articles (create, list, update, delete)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -120,11 +120,16 @@ form {
 }
 
 input,
+textarea,
 select {
-  height: 48px;
   padding: 10px;
   font-size: 1rem;
   font-family: inherit;
+}
+
+input,
+select {
+  height: 48px;
 }
 
 label {
