--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h2>Daily</h2>
     <div class="issue">
-        <div class="cover"></div>
+        <div class="issue-cover"></div>
         <div class="issue-content">
             <div class="actions">
                 <a href="#">Browse this issue</a>
