--- a/templates/articles/article_delete.html
+++ b/templates/articles/article_delete.html
@@ -9,6 +9,6 @@
         <p>{{ article.title }}</p>
         <p>{{ article.subtitle }}</p>
         <p>Issue: {{ article.issue.title }} ({{ article.issue.pk }})</p>
-        <button type="submit">Delete</button>
+        <button class="destructive" type="submit">Delete</button>
     </form>
 {% endblock content %}
