--- a/templates/issues/issue_delete.html
+++ b/templates/issues/issue_delete.html
@@ -4,12 +4,20 @@
 {% endblock title %}
 {% block content %}
     <h2>Delete issue</h2>
-    <form method="post">
+    <form class="issue-delete-form" method="post">
         {% csrf_token %}
         <p>Are you sure you want to delete the following issue:</p>
-        <p>{{ issue.title }}</p>
-        <p>Issue: {{ issue.pk }}</p>
-        <p>Edition: {{ issue.edition|title }}</p>
-        <button type="submit">Delete</button>
+        <div class="issue-detail-container">
+            <div class="issue-cover"></div>
+            <div class="issue-detail-info">
+                <div class="issue-detail-heading">
+                    <h2>{{ object.title }}</h2>
+                </div>
+                <p>Issue: {{ object.pk }}</p>
+                <p>Edition: {{ object.edition|title }}</p>
+                <p>Editor: {{ object.editor.first_name }} {{ object.editor.last_name }}</p>
+            </div>
+        </div>
+        <button class="destructive" type="submit">Delete</button>
     </form>
 {% endblock content %}
