--- a/templates/issues/issue_detail.html
+++ b/templates/issues/issue_detail.html
@@ -3,10 +3,21 @@
     {{ object.title }}
 {% endblock title %}
 {% block content %}
-    <h2>{{ object.title }}</h2>
-    <p>{{ object.pk }}</p>
-    <p>{{ object.edition|title }}</p>
-    <p>{{ object.editor }}</p>
-    <a href="{% url 'issue_edit' issue.pk %}">Edit</a>
-    <a href="{% url 'issue_delete' issue.pk %}">Delete</a>
+    <div class="issue-detail-container">
+        <div class="issue-cover"></div>
+        <div class="issue-detail-info">
+            <div class="issue-detail-heading">
+                <h2>{{ object.title }}</h2>
+                {% if user.is_authenticated and user.role == "EDITOR" %}
+                    <div class="issue-actions">
+                        <a href="{% url 'issue_delete' issue.pk %}">Delete</a>
+                        <a href="{% url 'issue_edit' issue.pk %}">Edit</a>
+                    </div>
+                {% endif %}
+            </div>
+            <p>Issue: {{ object.pk }}</p>
+            <p>Edition: {{ object.edition|title }}</p>
+            <p>Editor: {{ object.editor.first_name }} {{ object.editor.last_name }}</p>
+        </div>
+    </div>
 {% endblock content %}
