--- a/templates/base.html
+++ b/templates/base.html
@@ -22,33 +22,33 @@
         <nav>
             <div class="pages">
                 <a href="{% url 'home' %}">Home</a>
-                <span class="divider">|</span>
+                <span class="separator">|</span>
                 <a href="{% url 'article_list' %}">Articles</a>
-                <span class="divider">|</span>
+                <span class="separator">|</span>
                 <a href="{% url 'issue_list' %}">Issues</a>
-                <span class="divider">|</span>
+                <span class="separator">|</span>
                 <a href="{% url 'about' %}">About</a>
             </div>
             {% if user.is_authenticated %}
                 <div class="user">
-                    <a href="#">{{ user.first_name }} {{ user.last_name }}</a>
+                    <a href="{% url 'profile' %}">{{ user.first_name }} {{ user.last_name }}</a>
                 </div>
             {% endif %}
             <div class="actions">
                 {% if user.is_authenticated %}
                     {% if user.role == "EDITOR" %}
                         <a href="{% url 'issue_new' %}">New Issue</a>
-                        <span class="divider">|</span>
+                        <span class="separator">|</span>
                     {% endif %}
                     <a href="{% url 'article_new' %}">New Article</a>
-                    <span class="divider">|</span>
+                    <span class="separator">|</span>
                     <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
                         <button type="submit">Log Out</button>
                     </form>
                 {% else %}
                     <a href="{% url 'login' %}">Log In</a>
-                    <span class="divider">|</span>
+                    <span class="separator">|</span>
                     <a href="{% url 'signup' %}">Sign Up</a>
                 {% endif %}
             </div>
