--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -10,6 +10,7 @@
         </div>
         <div class="profile-actions">
             <a href="{% url 'password_change' %}">Change Password</a>
+            <a href="#">Edit Profile</a>
         </div>
     </div>
     <div class="profile-info">
