--- a/templates/articles/article_delete.html
+++ b/templates/articles/article_delete.html
@@ -4,11 +4,15 @@
 {% endblock title %}
 {% block content %}
     <h2>Delete article</h2>
-    <form method="post">
+    <form class="article-delete-form" method="post">
         <p>Are you sure you want to delete the following article:</p>
-        <p>{{ article.title }}</p>
-        <p>{{ article.subtitle }}</p>
-        <p>Issue: {{ article.issue.title }} ({{ article.issue.pk }})</p>
+        <h3>{{ article.title }}</h3>
+        <div class="article-info">
+            <p>{{ article.subtitle }}</p>
+            <p>
+                Author: {{ article.author.first_name }} {{ article.author.last_name }} — Issue: {{ article.issue.title }} ({{ article.issue.pk }})
+            </p>
+        </div>
         <button class="destructive" type="submit">Delete</button>
     </form>
 {% endblock content %}
