Make the window title of all templates more uniform

--- a/templates/articles/article_delete.html
+++ b/templates/articles/article_delete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Delete article
+    Delete article — core news
 {% endblock title %}
 {% block content %}
     <h2>Delete article</h2>
