--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    {{ object.title }}
+    {{ object.title }} — core news
 {% endblock title %}
 {% block content %}
     <div class="article-detail-container">
