--- a/templates/articles/article_edit.html
+++ b/templates/articles/article_edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Edit article
+    Edit article — core news
 {% endblock title %}
 {% block content %}
     <h2>Edit article</h2>
