--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Articles
+    Articles — core news
 {% endblock title %}
 {% block content %}
     <h2>Articles</h2>
