--- a/templates/articles/article_new.html
+++ b/templates/articles/article_new.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Create new article
+    Create new article — core news
 {% endblock title %}
 {% block content %}
     <h2>Create new article</h2>
