--- a/templates/issues/issue_delete.html
+++ b/templates/issues/issue_delete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Delete issue
+    Delete issue — core news
 {% endblock title %}
 {% block content %}
     <h2>Delete issue</h2>
