--- a/templates/issues/issue_new.html
+++ b/templates/issues/issue_new.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Create new issue
+    Create new issue — core news
 {% endblock title %}
 {% block content %}
     <h2>Create new issue</h2>
